--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Bienvenido a Github</h1>
     <h2>Primer commit</h2>
+
+    <footer>
+        <h4>Esto es un footer</h4>
+    </footer>
 </body>
 </html>
