--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <footer>
         <h4>Esto es un footer</h4>
+        <img src="" alt="Imagen de un gatito">
     </footer>
 </body>
 </html>
