--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Bienvenido a Github</h1>
     <h2>Primer commit</h2>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi cumque, qui asperiores aspernatur nostrum labore architecto rerum placeat eligendi id doloribus possimus sunt repellat dicta quisquam cum rem voluptates!</p>
+        <img src="" alt="Otro gato">
+    </div>
 </body>
 </html>
